# projetos

./: README.md
projetos/: Projeto-fastAPI-schemas  README.md
projetos/Fast_API/: crud  main  models
projetos/Locadora/: locadora_funções  locadora_mais_simples
projetos/projeto-api2/desafio-api2/: Dockerfile  Makefile  pyproject.toml
projetos/projeto-api2/desafio-api2/store/: main.py
projetos/projeto-api2/desafio-api2/store/core/: config.py
projetos/projeto-api2/desafio-api2/store/core/api/endpoints/: product.py
projetos/projeto-api2/desafio-api2/store/core/errors/: exceptions.py
projetos/projeto-api2/desafio-api2/store/core/models/: product.py
projetos/projeto-api2/desafio-api2/store/core/schemas/: base.py  product.py
projetos/projeto-api2/desafio-api2/store/core/use_cases/: product.py
projetos/projeto-api2/desafio-api2/tests/: factories.py
projetos/projeto-api2/desafio-api2/tests/schemas/: test_product.py  use_cases.py
projetos/projeto1-sistema_bancário/: módulo_sistema_bancário - POO  projeto banco - POO, interadores, geradores, datatime  projeto banco - funções.py  projeto banco.py
